--- a/MAAAII/p2.ipynb
+++ b/MAAAII/p2.ipynb
@@ -1,1 +1,206 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# P2 MAAAI "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PREPROCESADO DE DATOS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.datasets import cifar100\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz\n",
+      "\u001b[1m169001437/169001437\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 0us/step\n",
+      "Entrenamiento: (50000, 32, 32, 3), Prueba: (10000, 32, 32, 3)\n",
+      "Instancias de entrenamiento etiquetadas: (10000, 32, 32, 3), No etiquetadas: (40000, 32, 32, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Cargar el conjunto de datos CIFAR-100\n",
+    "(x_train, y_train), (x_test, y_test) = cifar100.load_data()\n",
+    "\n",
+    "print(f\"Entrenamiento: {x_train.shape}, Prueba: {x_test.shape}\")\n",
+    "\n",
+    "# Eliminamos el 80% de las etiquetas en el conjunto de entrenamiento\n",
+    "np.random.seed(42)\n",
+    "unlabeled_indices = np.random.choice(len(x_train), size=int(0.8 * len(x_train)), replace=False)\n",
+    "labeled_indices = np.setdiff1d(np.arange(len(x_train)), unlabeled_indices)\n",
+    "\n",
+    "# Creamos las particiones de datos\n",
+    "x_train_labeled = x_train[labeled_indices]\n",
+    "y_train_labeled = y_train[labeled_indices]\n",
+    "x_train_unlabeled = x_train[unlabeled_indices]\n",
+    "y_train_unlabeled = y_train[unlabeled_indices]  \n",
+    "\n",
+    "print(f\"Instancias de entrenamiento etiquetadas: {x_train_labeled.shape}, No etiquetadas: {x_train_unlabeled.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CREACIÓN DE LA RED NEURONAL CONVOLUCIONAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras import layers, models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.Sequential()\n",
+    "\n",
+    "# Capa convolucional 1\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "# Capa convolucional 2\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "# Capa convolucional 3\n",
+    "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "# Aplanamos las salidas para pasar a la parte densa\n",
+    "model.add(layers.Flatten())\n",
+    "\n",
+    "# Capa densa 1\n",
+    "model.add(layers.Dense(512, activation='relu'))\n",
+    "\n",
+    "# Capa densa 2\n",
+    "model.add(layers.Dense(256, activation='relu'))\n",
+    "\n",
+    "# Capa de salida\n",
+    "model.add(layers.Dense(100, activation='softmax'))\n",
+    "\n",
+    "# Compilamos el modelo\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 45ms/step - accuracy: 0.0192 - loss: 10.2869\n",
+      "Epoch 2/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 48ms/step - accuracy: 0.0537 - loss: 4.2752\n",
+      "Epoch 3/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 49ms/step - accuracy: 0.1080 - loss: 3.9117\n",
+      "Epoch 4/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 51ms/step - accuracy: 0.1516 - loss: 3.6313\n",
+      "Epoch 5/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 49ms/step - accuracy: 0.1962 - loss: 3.3570\n",
+      "Epoch 6/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 51ms/step - accuracy: 0.2384 - loss: 3.1225\n",
+      "Epoch 7/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 48ms/step - accuracy: 0.2958 - loss: 2.8511\n",
+      "Epoch 8/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 52ms/step - accuracy: 0.3282 - loss: 2.6163\n",
+      "Epoch 9/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 49ms/step - accuracy: 0.4058 - loss: 2.3554\n",
+      "Epoch 10/10\n",
+      "\u001b[1m79/79\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 50ms/step - accuracy: 0.4624 - loss: 2.0421\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ENTRENAMIENTO\n",
+    "history = model.fit(x_train_labeled, y_train_labeled, epochs=10, batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 - 2s - 7ms/step - accuracy: 0.1980 - loss: 3.8885\n",
+      "Rendimiento en la prueba: Pérdida = 3.888547658920288, Precisión = 0.1979999989271164\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CONJUNTO DE PRUEBA\n",
+    "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
+    "\n",
+    "print(f\"Rendimiento en la prueba: Pérdida = {test_loss}, Precisión = {test_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
