commit que flipas, 1 acabado

--- a/MAAAII/puteria.ipynb
+++ b/MAAAII/puteria.ipynb
@@ -112,26 +112,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\108057\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'compile'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 19\u001b[0m\n\u001b[0;32m      2\u001b[0m     model \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mSequential([\n\u001b[0;32m      3\u001b[0m         layers\u001b[38;5;241m.\u001b[39mConv2D(\u001b[38;5;241m32\u001b[39m, (\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m), activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msame\u001b[39m\u001b[38;5;124m'\u001b[39m, input_shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m32\u001b[39m,\u001b[38;5;241m32\u001b[39m,\u001b[38;5;241m3\u001b[39m)),\n\u001b[0;32m      4\u001b[0m         layers\u001b[38;5;241m.\u001b[39mMaxPooling2D((\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m)),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m         layers\u001b[38;5;241m.\u001b[39mDense(\u001b[38;5;241m100\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoftmax\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     16\u001b[0m     ])\n\u001b[0;32m     18\u001b[0m model_sup \u001b[38;5;241m=\u001b[39m build_model()\n\u001b[1;32m---> 19\u001b[0m \u001b[43mmodel_sup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m(optimizer\u001b[38;5;241m=\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mAdam(),\n\u001b[0;32m     20\u001b[0m                   loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategorical_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     21\u001b[0m                   metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Entrenamiento con solo datos etiquetados\u001b[39;00m\n\u001b[0;32m     24\u001b[0m history_sup \u001b[38;5;241m=\u001b[39m model_sup\u001b[38;5;241m.\u001b[39mfit(x_train_labeled, y_train_labeled,\n\u001b[0;32m     25\u001b[0m                             epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m64\u001b[39m,\n\u001b[0;32m     26\u001b[0m                             validation_data\u001b[38;5;241m=\u001b[39m(x_test, y_test_cat),\n\u001b[0;32m     27\u001b[0m                             verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'compile'"
+      "Epoch 1/20\n",
+      "157/157 - 9s - 57ms/step - accuracy: 0.0302 - loss: 4.3883 - val_accuracy: 0.0650 - val_loss: 4.1608\n",
+      "Epoch 2/20\n",
+      "157/157 - 7s - 44ms/step - accuracy: 0.0939 - loss: 3.9342 - val_accuracy: 0.1145 - val_loss: 3.8279\n",
+      "Epoch 3/20\n",
+      "157/157 - 7s - 43ms/step - accuracy: 0.1541 - loss: 3.5827 - val_accuracy: 0.1532 - val_loss: 3.5980\n",
+      "Epoch 4/20\n",
+      "157/157 - 7s - 44ms/step - accuracy: 0.2031 - loss: 3.2759 - val_accuracy: 0.1926 - val_loss: 3.3958\n",
+      "Epoch 5/20\n",
+      "157/157 - 7s - 46ms/step - accuracy: 0.2548 - loss: 3.0036 - val_accuracy: 0.2138 - val_loss: 3.2728\n",
+      "Epoch 6/20\n",
+      "157/157 - 7s - 46ms/step - accuracy: 0.3018 - loss: 2.7657 - val_accuracy: 0.2276 - val_loss: 3.2613\n",
+      "Epoch 7/20\n",
+      "157/157 - 7s - 46ms/step - accuracy: 0.3497 - loss: 2.5333 - val_accuracy: 0.2448 - val_loss: 3.2171\n",
+      "Epoch 8/20\n",
+      "157/157 - 7s - 47ms/step - accuracy: 0.4040 - loss: 2.2789 - val_accuracy: 0.2566 - val_loss: 3.1900\n",
+      "Epoch 9/20\n",
+      "157/157 - 7s - 47ms/step - accuracy: 0.4621 - loss: 2.0311 - val_accuracy: 0.2635 - val_loss: 3.2668\n",
+      "Epoch 10/20\n",
+      "157/157 - 8s - 48ms/step - accuracy: 0.5127 - loss: 1.7898 - val_accuracy: 0.2560 - val_loss: 3.4214\n",
+      "Epoch 11/20\n",
+      "157/157 - 8s - 49ms/step - accuracy: 0.5816 - loss: 1.5337 - val_accuracy: 0.2664 - val_loss: 3.4871\n",
+      "Epoch 12/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.6383 - loss: 1.3018 - val_accuracy: 0.2661 - val_loss: 3.6804\n",
+      "Epoch 13/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.6983 - loss: 1.0804 - val_accuracy: 0.2652 - val_loss: 3.9847\n",
+      "Epoch 14/20\n",
+      "157/157 - 8s - 49ms/step - accuracy: 0.7562 - loss: 0.8665 - val_accuracy: 0.2635 - val_loss: 4.2439\n",
+      "Epoch 15/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.8108 - loss: 0.6665 - val_accuracy: 0.2631 - val_loss: 4.8511\n",
+      "Epoch 16/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.8327 - loss: 0.5684 - val_accuracy: 0.2507 - val_loss: 5.1024\n",
+      "Epoch 17/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.8825 - loss: 0.4145 - val_accuracy: 0.2580 - val_loss: 5.4226\n",
+      "Epoch 18/20\n",
+      "157/157 - 8s - 49ms/step - accuracy: 0.9185 - loss: 0.2883 - val_accuracy: 0.2518 - val_loss: 5.9001\n",
+      "Epoch 19/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.9297 - loss: 0.2540 - val_accuracy: 0.2563 - val_loss: 6.3854\n",
+      "Epoch 20/20\n",
+      "157/157 - 8s - 50ms/step - accuracy: 0.9591 - loss: 0.1546 - val_accuracy: 0.2520 - val_loss: 6.6195\n",
+      "Supervisado: Train Accuracy: 0.9592 - Test Accuracy: 0.2520\n"
      ]
     }
    ],
@@ -211,9 +239,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1250/1250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 7ms/step\n",
+      "Número de pseudo-etiquetas seleccionadas: 14213\n",
+      "Epoch 1/20\n",
+      "379/379 - 16s - 43ms/step - accuracy: 0.1859 - loss: 3.5708 - val_accuracy: 0.1802 - val_loss: 3.5944\n",
+      "Epoch 2/20\n",
+      "379/379 - 15s - 38ms/step - accuracy: 0.3680 - loss: 2.5752 - val_accuracy: 0.2255 - val_loss: 3.3375\n",
+      "Epoch 3/20\n",
+      "379/379 - 16s - 41ms/step - accuracy: 0.4518 - loss: 2.1615 - val_accuracy: 0.2496 - val_loss: 3.2486\n",
+      "Epoch 4/20\n",
+      "379/379 - 18s - 48ms/step - accuracy: 0.5172 - loss: 1.8503 - val_accuracy: 0.2591 - val_loss: 3.3633\n",
+      "Epoch 5/20\n",
+      "379/379 - 16s - 42ms/step - accuracy: 0.5661 - loss: 1.6191 - val_accuracy: 0.2676 - val_loss: 3.3914\n",
+      "Epoch 6/20\n",
+      "379/379 - 16s - 41ms/step - accuracy: 0.6143 - loss: 1.4153 - val_accuracy: 0.2749 - val_loss: 3.4355\n",
+      "Epoch 7/20\n",
+      "379/379 - 16s - 42ms/step - accuracy: 0.6633 - loss: 1.2126 - val_accuracy: 0.2725 - val_loss: 3.7549\n",
+      "Epoch 8/20\n",
+      "379/379 - 16s - 42ms/step - accuracy: 0.7064 - loss: 1.0243 - val_accuracy: 0.2729 - val_loss: 3.9595\n",
+      "Epoch 9/20\n",
+      "379/379 - 16s - 43ms/step - accuracy: 0.7493 - loss: 0.8713 - val_accuracy: 0.2693 - val_loss: 4.1896\n",
+      "Epoch 10/20\n",
+      "379/379 - 16s - 43ms/step - accuracy: 0.7888 - loss: 0.7144 - val_accuracy: 0.2663 - val_loss: 4.3668\n",
+      "Epoch 11/20\n",
+      "379/379 - 17s - 45ms/step - accuracy: 0.8312 - loss: 0.5685 - val_accuracy: 0.2609 - val_loss: 4.8877\n",
+      "Epoch 12/20\n",
+      "379/379 - 17s - 45ms/step - accuracy: 0.8610 - loss: 0.4632 - val_accuracy: 0.2586 - val_loss: 5.3960\n",
+      "Epoch 13/20\n",
+      "379/379 - 17s - 46ms/step - accuracy: 0.8747 - loss: 0.3976 - val_accuracy: 0.2504 - val_loss: 5.6872\n",
+      "Epoch 14/20\n",
+      "379/379 - 18s - 48ms/step - accuracy: 0.9053 - loss: 0.3100 - val_accuracy: 0.2616 - val_loss: 6.2509\n",
+      "Epoch 15/20\n",
+      "379/379 - 23s - 60ms/step - accuracy: 0.9161 - loss: 0.2610 - val_accuracy: 0.2493 - val_loss: 6.9453\n",
+      "Epoch 16/20\n",
+      "379/379 - 21s - 54ms/step - accuracy: 0.9228 - loss: 0.2404 - val_accuracy: 0.2531 - val_loss: 6.9618\n",
+      "Epoch 17/20\n",
+      "379/379 - 19s - 51ms/step - accuracy: 0.9305 - loss: 0.2176 - val_accuracy: 0.2513 - val_loss: 7.2846\n",
+      "Epoch 18/20\n",
+      "379/379 - 20s - 52ms/step - accuracy: 0.9402 - loss: 0.1853 - val_accuracy: 0.2551 - val_loss: 7.7042\n",
+      "Epoch 19/20\n",
+      "379/379 - 19s - 50ms/step - accuracy: 0.9457 - loss: 0.1686 - val_accuracy: 0.2587 - val_loss: 8.1455\n",
+      "Epoch 20/20\n",
+      "379/379 - 16s - 41ms/step - accuracy: 0.9461 - loss: 0.1654 - val_accuracy: 0.2511 - val_loss: 8.3178\n",
+      "Self-training: Train Accuracy: 0.9627 - Test Accuracy: 0.2511\n"
+     ]
+    }
+   ],
    "source": [
     "# Umbral para la certeza de las pseudo-etiquetas\n",
     "confidence_threshold = 0.9\n",
@@ -234,10 +312,7 @@
     "y_combined = np.concatenate([y_train_labeled, pseudo_labels_cat[selected]], axis=0)\n",
     "\n",
     "# Reiniciar el modelo (o seguir afinando)\n",
-    "model_self = build_supervised_model()\n",
-    "model_self.compile(optimizer=optimizers.Adam(),\n",
-    "                   loss='categorical_crossentropy',\n",
-    "                   metrics=['accuracy'])\n",
+    "model_self = build_model()\n",
     "\n",
     "history_self = model_self.fit(x_combined, y_combined,\n",
     "                              epochs=20, batch_size=64,\n",
